# cfph-launcher-wrapper

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
docs/: roadmap.md
embed/: steps.rc
src/: gui.rs  main.rs
