[package]
name = "cfph-launcher"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-resource = "3"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
]
